2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `printf %.2d' check to configure.ac.

	* configure.ac: Add check for `printf %.2d' DTRT.
	(PRINTF_DOT2_OK): New AC_DEFINE_UNQUOTED.

2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] Rename configure.in to configure.ac.

	* Makefile.in (dist, $(srcdir)/configure): Update.
	* configure.ac: Rename from configure.in.

2010-03-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Distribute subdir v/, as well.

	* Makefile.in (v): Distribute v/ contents, as well.

2010-03-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add a directory dedicated to verification.

	* configure.in (AC_CONFIG_FILES): Add v/Makefile, v/common.
	* Makefile.in (installcheck): No longer do in man/; do in v/.
	(check): Also do in v/.

2010-03-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Add texinfo manual.

	* doc: New directory.
	* doc/fdl.texi: New file (from gnulib fdl-1.3.texi).
	* doc/texinfo.tex: New file (from texinfo 4.13).
	* doc/Makefile.in: New file.
	* doc/rcs.texi: New file.
	* configure.in (AC_CONFIG_FILES): Add doc/Makefile.
	* Makefile.in (doc): New target.
	(dist): Make `doc' before `distclean'.
	In dist dir, create subdir doc/; populate it from doc/.

2010-03-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dist] Distribute the config header template.

	* Makefile.in (dist) For subdir src/, specify *.in
	to include both Makefile.in and auto-sussed.h.in.

2010-03-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add basic "make check" support.

	* Makefile.in (standard_GNU_targets): Remove check.
	(check): New target.
	(dist): Update name of test program to distribute.
	* README: Update; no longer mention RCSPREFIX, installdebug.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add check for GCC attribute `unused'.

	* configure.in (unused): New RCS_CHECK_GCC_ATTRIBUTE.

2010-03-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move all DIFF* config to configure.in; assume diffutils.
