@@ -1,3 +1,9 @@
+2010-03-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Document rcsdiff(1) options passed to underyling diff(1).
+
+	* rcsdiff.c (:help comment): Expand.
+
 2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	rcsdiff: Accept `-U N' to output N lines of unified context.
