@@ -1,3 +1,9 @@
+2010-03-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Document rcsdiff(1) options passed to underyling diff(1).
+
+	* doc/rcs.texi (rcsdiff): Update @verbatim block.
+
 2010-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Move `printf %.2d' check to configure.ac.
